--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 <header>
-<section class="banner">
-    
+<section class="banner-container">
+    <div class="banner-content">
+        <h3>Happy New Year</h3>
+        <h1>New Year Party   </h1>
+        <h1> Celebration</h1>
+    </div>
 </section>    
 
 </header>
