added categories section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 </section>    
 
 </header>
-<main></main>
+<!-- ..........DISCOUNT SECTION start......... -->
+<main>
+<section class="discount">
+
+    <div class="discount-container">
+       <div class="discount-content-msge"><h1>65% OFF</h1>
+        <h5>OUR HOLIDAY DEALS ARE BETTER</h5>
+        <h3>ALL CATEGORIES</h3></div> 
+<div class="discount-content-img"><img src="images/New Year Photo.png" alt=""></div>
+    </div>
+</section>
+
+</main>
 <footer></footer>
 </body>
 </html>
