added party section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 <div class="discount-content-img"><img src="images/New Year Photo.png" alt=""></div>
     </div>
 </section>
+  <!-- ............party section -->
+   <section class="party-container">
+   <div class="party-content">
+    <div class="party-section-msge">
+        <h1>Welcome to <br> midnight party</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+       <div> <button>Join Now</button></div>
+     </div>
+
+    <div class="img"><img src="images/Group 70.png" alt=""></div> 
+   </div>
+
+   </section>
 
 </main>
 <footer></footer>
