--- a/index.html
+++ b/index.html
@@ -39,9 +39,40 @@
 
     <div class="img"><img src="images/Group 70.png" alt=""></div> 
    </div>
-
    </section>
-
+   <!-- ..............holiday-discount start........... -->
+    <section class="holiday-discount">
+        <div class="location-container"> 
+            <div class="location-content">
+                <p><span>Place:</span> New Park Hotel </p>
+                <p><span> Date:</span>31 December Night 2023</p>  
+             <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+             <button>join now </button>
+            </div>
+            </div>
+    </section>
+    <!-- .................. -->
+     <section class="holi-offer">
+        <div class="holi-offer-container">
+            <div class="one">
+                <h5>New Best Offer</h5>
+                <h2>Coming Soon</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="two"><img src="images/Ellipse 1.png" alt=""></div>
+            <div class="three">
+                <h3>2024</h3>
+                <p>Dolor sit amet consectetur <br> Consequat eget consectetur <br> maecenas sed.</p>
+                <img src="images/Group 96.png" alt="" height="140px"
+                width="140px">
+            </div>
+        </div>
+     </section>
+<!-- 
+     <section class="holiday-container">
+        <div class="heading"></div>
+        <div class="red-bottom"></div>
+     </section> -->
 </main>
 <footer></footer>
 </body>
