added holiday discount section

--- a/index.html
+++ b/index.html
@@ -68,11 +68,19 @@
             </div>
         </div>
      </section>
-<!-- 
+
      <section class="holiday-container">
-        <div class="heading"></div>
+        <div class="heading">
+            <h5>WHAT IS FUNCTIONAL</h5>
+            <h1 class="holiday"> <span>Holidays</span> Sale 50%</h1>
+            <p>Dolor sit amet consectetur. Consequat eget <br> consectetur maecenas sed 
+                molestie malesuada. Ipsum sed sodales risus ut  pellentesque vel euismod. Eleifend nunc purus <br> quam id fermentum amet amet sit consectetur.</p>
+        </div>
+        <img  class="gift-box" src="images/Group 75.png" alt="" height="570" width="670">
+        <img class="discount" src="images/Group 44.png " height="300px" width="300px">
         <div class="red-bottom"></div>
-     </section> -->
+     </section> 
+    
 </main>
 <footer></footer>
 </body>
