added email section

--- a/index.html
+++ b/index.html
@@ -77,11 +77,34 @@
                 molestie malesuada. Ipsum sed sodales risus ut  pellentesque vel euismod. Eleifend nunc purus <br> quam id fermentum amet amet sit consectetur.</p>
         </div>
         <img  class="gift-box" src="images/Group 75.png" alt="" height="570" width="670">
-        <img class="discount" src="images/Group 44.png " height="300px" width="300px">
+        <img class="discount2" src="images/Group 44.png " height="300px" width="300px">
         <div class="red-bottom"></div>
      </section> 
-    
+     <section class="product-img-container">
+        <div class="description-container">
+            <h5>THE BEST GIFTS</h5>
+            <h3>Our Awesome Portfolio</h3>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="product-img-content">
+         <div><img src="images/Rectangle 3.png" alt=""></div>
+         <div><img src="images/Rectangle 4.png" alt=""></div>
+         <div><img src="images/Rectangle 5.png" alt=""></div>
+         <div><img src="images/Rectangle 6.png" alt=""></div>
+         <div><img src="images/Rectangle 7.png" alt=""></div>
+         <div><img src="images/Rectangle 8.png" alt=""></div>
+        </div>
+     </section>
+     <!-- .............subscribe section.................. -->
+    <section class="subscribe"> 
+        <div class="email"><img src="images/Group 61.png" alt=""></div>
+        <div class="title">Subscribe Newsletter</div>
+        <div  class="para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </div>
+        <div class="btn"><input class="input1" type="email" placeholder="user@gmail.com"><button>Subscribe</button> </div></section>
 </main>
-<footer></footer>
+
+<footer>
+   
+</footer>
 </body>
 </html>
